# rixin-contract-search

./: .env.example  .gitignore  README.md  docker-compose.yml
app/: __init__.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_doc_results.py  0003_phase2_workbench.py  0004_phase3_trustworthy_evidence.py
backend/app/: config.py  db.py  enums.py  errors.py  main.py  models.py  schemas.py  worker.py
backend/app/api/: agent_evals.py  auth.py  contracts.py  health.py  qmd_documents.py  screening_tasks.py
backend/app/application/: screening_runner.py  task_queue.py
backend/app/services/: audit.py  evals.py  exports.py  storage.py  streaming.py  validation.py
backend/app/services/agent/: aggregator.py  classifier.py  evidence_ledger.py  langgraph_agent.py  llm.py  screening_plan.py  verifier.py
backend/app/services/parsing/: artifact_writer.py  unified_parser_client.py
backend/app/services/retrieval/: qmd_client.py
backend/tests/: conftest.py  test_agent_evals.py  test_agent_llm.py  test_alembic_migrations.py  test_config.py  test_import_bootstrap.py  test_langgraph_agent.py  test_phase2_exports.py  test_phase2_health_worker.py  test_phase2_workbench.py  test_phase3_agent_verification.py  test_phase3_evidence_api.py  test_phase3_models_migration.py  test_phase3_plan_schema.py  test_qmd_client.py  test_qmd_deep_read_client.py  test_qmd_documents_api.py  test_qmd_screening_flow.py  test_unified_parser_client.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  (+4 more)
(+31 files in other folders)
