[project]
name = "contract-screening-agent"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "langchain-core>=0.3,<1",
  "langchain-openai>=0.2,<1",
  "langgraph>=0.2,<1",
  "openpyxl>=3.1,<4",
  "pillow>=10,<12",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "pypdf>=4,<6",
  "python-multipart>=0.0.9,<1",
  "redis>=5,<7",
  "rq>=1.16,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1"
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "requests>=2.32,<3"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", ".."]
